[gd_scene load_steps=11 format=3 uid="uid://b1c5u72m6lcn5"]

[ext_resource type="Script" path="res://levels/scenes/gameplay/strong_brick.gd" id="1_hdqax"]
[ext_resource type="Texture2D" uid="uid://8awy2hh4mpfn" path="res://assets/sprites/bricks/strong-brick.png" id="2_8jo1y"]
[ext_resource type="Texture2D" uid="uid://veiqxjxuqqca" path="res://assets/sprites/bricks/strong-brick-2h.png" id="3_j5pev"]
[ext_resource type="Texture2D" uid="uid://cwcumdldp4hag" path="res://assets/sprites/bricks/strong-brick-1h.png" id="4_a7qsf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xbmfq"]
size = Vector2(64, 32)

[sub_resource type="Gradient" id="Gradient_fatng"]
offsets = PackedFloat32Array(0.470085, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_xi768"]
gradient = SubResource("Gradient_fatng")

[sub_resource type="Curve" id="Curve_wi5hd"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.797945, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_akvs0"]
curve = SubResource("Curve_wi5hd")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_y2w7j"]
lifetime_randomness = 0.5
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 1.0
spread = 180.0
initial_velocity_max = 100.0
gravity = Vector3(0, 98, 0)
scale_max = 5.0
scale_curve = SubResource("CurveTexture_akvs0")
color = Color(0.415686, 0.478431, 0.635294, 1)
color_ramp = SubResource("GradientTexture1D_xi768")

[node name="ControlBrick" type="Control"]
custom_minimum_size = Vector2(64, 32)
layout_mode = 3
anchors_preset = 0

[node name="StrongBrick" type="StaticBody2D" parent="."]
position = Vector2(32, 16)
script = ExtResource("1_hdqax")

[node name="NormalBrick" type="Sprite2D" parent="StrongBrick"]
texture = ExtResource("2_8jo1y")

[node name="HealthBreakTwo" type="Sprite2D" parent="StrongBrick"]
visible = false
texture = ExtResource("3_j5pev")

[node name="HealthBreakOne" type="Sprite2D" parent="StrongBrick"]
visible = false
texture = ExtResource("4_a7qsf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StrongBrick"]
visible = false
shape = SubResource("RectangleShape2D_xbmfq")

[node name="BrickBreak" type="GPUParticles2D" parent="StrongBrick"]
emitting = false
amount = 25
process_material = SubResource("ParticleProcessMaterial_y2w7j")
lifetime = 0.7
one_shot = true
explosiveness = 1.0
